# stardust

./: .gitignore  .gitmodules  Cargo.toml  README.md
Documentation/Examples/apm-store/: 01-协议处理模块.md  02-核心工具模块.md  03-打包与部署.md  04-桌面集成.md  README.md
Documentation/Examples/gnome-software/: 01-工程结构.md  02-核心库.md  03-插件系统.md  04-任务调度.md  05-用户界面.md  06-Flatpak插件.md  07-PackageKit插件.md  08-API参考.md  README.md
Documentation/Examples/spark-store/: 01-工程结构.md  02-核心模块.md  03-后端模块.md  04-页面与控件.md  05-DBus接口.md  06-辅助工具.md  07-API文档.md  08-流程图.md  09-更新工具.md  README.md
Documentation/Examples/spark-store-tauri/: 01-项目结构.md  02-前端核心模块.md  03-后端核心模块.md  04-数据类型定义.md  05-UI组件模块.md  06-页面功能模块.md  07-下载管理模块.md  08-API接口文档.md  README.md
docs/: CONTRIBUTING.md  DESIGN.md  TROUBLESHOOTING.md
src/: api.rs  main.rs
