[package]
name = "stardust"
version = "0.1.0"
edition = "2021"
authors = ["Stardust Contributors"]
description = "An experimental project to refactor spark-store using a more modern design"
license = "GPL-3.0"

[dependencies]
iced = "0.14"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
